--- a/tests/_report/src_BoilerAppLogger.dashboard.html
+++ b/tests/_report/src_BoilerAppLogger.dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for C:\Users\emilien\workspace-zf2\app-logger</title>
+  <title>Dashboard for C:\Users\emilien\workspace-zf2\app-logger/src/BoilerAppLogger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -17,7 +17,9 @@
     <div class="row">
      <div class="span12">
       <ul class="breadcrumb">
-        <li><a href="index.html">C:\Users\emilien\workspace-zf2\app-logger</a></li>
+        <li><a href="index.html">C:\Users\emilien\workspace-zf2\app-logger</a> <span class="divider">/</span></li>
+        <li><a href="src.html">src</a> <span class="divider">/</span></li>
+        <li><a href="src_BoilerAppLogger.html">BoilerAppLogger</a></li>
         <li class="active">(Dashboard)</li>
 
       </ul>
@@ -94,7 +96,7 @@ $(document).ready(function() {
    labels: {style: {fontSize: '8px'}},
   },
   series: [{
-   data: [0,0,0,0,1,2,0,0,1,0,0,6]
+   data: [0,0,0,0,1,2,0,0,1,0,0,5]
   }],
  });
 
@@ -120,7 +122,7 @@ $(document).ready(function() {
    }
   },
   series: [{
-   data: [[100,3,"<a href=\"Module.php.html#3\">Module<\/a>"],[100,0,"<a href=\"src_BoilerAppLogger_Doctrine_DBAL_Types_LogRequestMethodEnum.php.html#3\">LogRequestMethodEnumType<\/a>"],[46.153846153846,9,"<a href=\"src_BoilerAppLogger_Entity_LogEntity.php.html#8\">LogEntity<\/a>"],[48.387096774194,17,"<a href=\"src_BoilerAppLogger_Factory_LoggerServiceFactory.php.html#3\">LoggerServiceFactory<\/a>"],[100,1,"<a href=\"src_BoilerAppLogger_Logger_AbstractLogger.php.html#3\">AbstractLogger<\/a>"],[71.428571428571,4,"<a href=\"src_BoilerAppLogger_Logger_MvcLogger.php.html#3\">MvcLogger<\/a>"],[100,15,"<a href=\"src_BoilerAppLogger_LoggerService.php.html#3\">LoggerService<\/a>"],[100,6,"<a href=\"src_BoilerAppLogger_LoggerServiceConfiguration.php.html#3\">LoggerServiceConfiguration<\/a>"],[100,0,"<a href=\"src_BoilerAppLogger_Repository_LogRepository.php.html#3\">LogRepository<\/a>"],[33.333333333333,9,"<a href=\"src_BoilerAppLogger_Logger_LoggerTrait.php.html#3\">LoggerTrait<\/a>"]],
+   data: [[100,0,"<a href=\"src_BoilerAppLogger_Doctrine_DBAL_Types_LogRequestMethodEnum.php.html#3\">LogRequestMethodEnumType<\/a>"],[46.153846153846,9,"<a href=\"src_BoilerAppLogger_Entity_LogEntity.php.html#8\">LogEntity<\/a>"],[48.387096774194,17,"<a href=\"src_BoilerAppLogger_Factory_LoggerServiceFactory.php.html#3\">LoggerServiceFactory<\/a>"],[100,1,"<a href=\"src_BoilerAppLogger_Logger_AbstractLogger.php.html#3\">AbstractLogger<\/a>"],[71.428571428571,4,"<a href=\"src_BoilerAppLogger_Logger_MvcLogger.php.html#3\">MvcLogger<\/a>"],[100,15,"<a href=\"src_BoilerAppLogger_LoggerService.php.html#3\">LoggerService<\/a>"],[100,6,"<a href=\"src_BoilerAppLogger_LoggerServiceConfiguration.php.html#3\">LoggerServiceConfiguration<\/a>"],[100,0,"<a href=\"src_BoilerAppLogger_Repository_LogRepository.php.html#3\">LogRepository<\/a>"],[33.333333333333,9,"<a href=\"src_BoilerAppLogger_Logger_LoggerTrait.php.html#3\">LoggerTrait<\/a>"]],
    marker: {
     symbol: 'diamond'
    }
