--- a/tests/_report/src_BoilerAppLogger_Doctrine_DBAL_Types_LogRequestMethodEnumType.php.html
+++ b/tests/_report/src_BoilerAppLogger_Doctrine_DBAL_Types_LogRequestMethodEnumType.php.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for C:\Users\emilien\workspace-zf2\app-logger/src/BoilerAppLogger/Repository/LogRepository.php</title>
+  <title>Code Coverage for C:\Users\emilien\workspace-zf2\app-logger/src/BoilerAppLogger/Doctrine/DBAL/Types/LogRequestMethodEnumType.php</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -20,8 +20,10 @@
         <li><a href="index.html">C:\Users\emilien\workspace-zf2\app-logger</a> <span class="divider">/</span></li>
         <li><a href="src.html">src</a> <span class="divider">/</span></li>
         <li><a href="src_BoilerAppLogger.html">BoilerAppLogger</a> <span class="divider">/</span></li>
-        <li><a href="src_BoilerAppLogger_Repository.html">Repository</a> <span class="divider">/</span></li>
-        <li class="active">LogRepository.php</li>
+        <li><a href="src_BoilerAppLogger_Doctrine.html">Doctrine</a> <span class="divider">/</span></li>
+        <li><a href="src_BoilerAppLogger_Doctrine_DBAL.html">DBAL</a> <span class="divider">/</span></li>
+        <li><a href="src_BoilerAppLogger_Doctrine_DBAL_Types.html">Types</a> <span class="divider">/</span></li>
+        <li class="active">LogRequestMethodEnumType.php</li>
 
       </ul>
      </div>
@@ -61,7 +63,7 @@
      </tr>
 
      <tr>
-      <td class="success">LogRepository</td>
+      <td class="success">LogRequestMethodEnumType</td>
       <td class="success big">       <div class="progress progress-success" style="width: 100px;">
         <div class="bar" style="width: 100.00%;"></div>
        </div>
@@ -83,7 +85,20 @@
    <table class="table table-borderless table-condensed">
     <tbody>
      <tr><td><div align="right"><a name="1"></a><a href="#1">1</a></div></td><td class="codeLine">&lt;?php</td></tr>
-     <tr><td><div align="right"><a name="2"></a><a href="#2">2</a></div></td><td class="codeLine">namespace BoilerAppLogger\Repository;</td></tr>
+     <tr><td><div align="right"><a name="2"></a><a href="#2">2</a></div></td><td class="codeLine">namespace BoilerAppLogger\Doctrine\DBAL\Types;</td></tr>
+     <tr><td><div align="right"><a name="3"></a><a href="#3">3</a></div></td><td class="codeLine">class LogRequestMethodEnumType extends \BoilerAppDb\Doctrine\DBAL\Types\AbstractEnumType{</td></tr>
+     <tr><td><div align="right"><a name="4"></a><a href="#4">4</a></div></td><td class="codeLine">    /**</td></tr>
+     <tr><td><div align="right"><a name="5"></a><a href="#5">5</a></div></td><td class="codeLine">     * @var string</td></tr>
+     <tr><td><div align="right"><a name="6"></a><a href="#6">6</a></div></td><td class="codeLine">     */</td></tr>
+     <tr><td><div align="right"><a name="7"></a><a href="#7">7</a></div></td><td class="codeLine">    protected $name = 'logrequestmethodenum';</td></tr>
+     <tr><td><div align="right"><a name="8"></a><a href="#8">8</a></div></td><td class="codeLine"></td></tr>
+     <tr><td><div align="right"><a name="9"></a><a href="#9">9</a></div></td><td class="codeLine">    /**</td></tr>
+     <tr><td><div align="right"><a name="10"></a><a href="#10">10</a></div></td><td class="codeLine">     * @var array</td></tr>
+     <tr><td><div align="right"><a name="11"></a><a href="#11">11</a></div></td><td class="codeLine">     */</td></tr>
+     <tr><td><div align="right"><a name="12"></a><a href="#12">12</a></div></td><td class="codeLine">    protected $values = array(</td></tr>
+     <tr><td><div align="right"><a name="13"></a><a href="#13">13</a></div></td><td class="codeLine">        \Zend\Http\Request::METHOD_POST,</td></tr>
+     <tr><td><div align="right"><a name="14"></a><a href="#14">14</a></div></td><td class="codeLine">        \Zend\Http\Request::METHOD_GET</td></tr>
+     <tr><td><div align="right"><a name="15"></a><a href="#15">15</a></div></td><td class="codeLine">    );</td></tr>
 
     </tbody>
    </table>
